--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 			<section>
 				<h2>Projects</h2>
 				<div>
-					<h3>Install script</h3>
+					<h3><a href="https://github.com/l0py2/install-scripts" target="_blank">Install scripts</a></h3>
 					<p>
 						Collection of installation scripts for GNU/Linux distributions
 					</p>
 				</div>
 				<div>
-					<h3>C Fast Fetch</h3>
+					<h3><a href="https://github.com/egujito/cff" target="_blank">C Fast Fetch</a></h3>
 					<p>
 						Fetch utility written in C whose main goal is to be fast<br/>
 						I am developing it alongside <a href="https://github.com/egujito" target="_blank">egujito</a>
