--- a/index.html
+++ b/index.html
@@ -11,35 +11,37 @@
 		<main>
 			<section id="greeting">
 				<h1>Hello I am <a href="https://github.com/l0py2" target="_blank">l0py2</a></h1>
-				<h2>Welcome to my home</h2>
 			</section>
-			<section>
+			<section id="projects">
 				<h2>Projects</h2>
 				<div>
 					<h3><a href="https://github.com/l0py2/install-scripts" target="_blank">Install scripts</a></h3>
 					<p>
-						Collection of installation scripts for GNU/Linux distributions
+						Collection of installation scripts for GNU/Linux distributions.
 					</p>
 				</div>
 				<div>
 					<h3><a href="https://github.com/egujito/cff" target="_blank">C Fast Fetch</a></h3>
 					<p>
-						Fetch utility written in C whose main goal is to be fast<br/>
-						I am developing it alongside <a href="https://github.com/egujito" target="_blank">egujito</a>
+						Fetch utility written in C whose main goal is to be fast.
+						<br/>
+						I am developing it alongside <a href="https://github.com/egujito" target="_blank">egujito</a>.
 					</p>
 				</div>
 			</section>
-			<section>
-				<h2>My likes are...</h2>
+			<section id="likes">
+				<h2>My likes are</h2>
 				<ul>
 					<li>Programming</li>
 					<li>Linux</li>
 					<li>Free Software</li>
+					<li>Lemons</li>
+					<li>Potatoes</li>
 				</ul>
 			</section>
-			<section>
+			<section id="contacts">
 				<h2>Contacts</h2>
-				<p>You can contact me with</p>
+				<p>You can contact me with:</p>
 				<table>
 					<thead>
 						<tr>
