--- a/index.html
+++ b/index.html
@@ -1,77 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<link rel="icon" href="images/icon.png"/>
-		<link rel="stylesheet" href="styles/main.css"/>
-		<link rel="stylesheet" href="styles/index.css"/>
-	</head>
-	<body>
-		<header>
-			<img src="images/avatar.jpg" alt="l0py2 GitHub avatar"/>
-			<h1>l0py2</h1>
-			<ul id="menu">
-				<li><a href="#about-me">About me</a></li>
-				<li><a href="#projects">Projects</a></li>
-				<li><a href="#tools-and-software">Tools and software</a></li>
-				<li><a href="#contacts-and-accounts">Contacts and accounts</a></li>
-			</ul>
-		</header>
-		<main>
-			<section id="about-me">
-				<h2>About me</h2>
-				<p>
-					I am l0py2 (Leonardo Silva) and I have loved programming
-					since 2018, when I started writting Batch scripts
-					to make text-based games and funny "malware" like
-					infinite file creation.
-				</p>
-				<p>My favourite fruit is the lemon 🍋.</p>
-				<p>I mainly watch Slice of Life Anime. I know, what a surprise.</p>
-				<p>My taste in music is quite eccentric, to say the least, I like Breakcore and Vocaloid.</p>
-			</section>
-			<section id="projects">
-				<h2>Projects</h2>
-				<h3><a href="https://github.com/l0py2/install-scripts" target="_blank">Install scripts</a></h3>
-				<p>Collection of installation scripts for Linux distributions.</p>
-				<h3><a href="https://github.com/l0py2/shiro" target="_blank">Shiro</a></h3>
-				<p>An Anime and Manga list written for CGI in C using SQLite.</p>
-			</section>
-			<section id="tools-and-software">
-				<h2>Tools and software</h2>
-				<ul>
-					<li>Arch Linux</li>
-					<li>Git</li>
-					<li>Neovim</li>
-				</ul>
-			</section>
-			<section id="contacts-and-accounts">
-				<h2>Contacts and accounts</h2>
-				<table>
-					<tr>
-						<td><img width="40" src="images/mail.svg" alt="Mail symbol"</td>
-						<td>E-mail</td>
-						<td><a href="mailto:l0py2.contact@gmail.com">l0py2.contact@gmail.com</a></td>
-					</tr>
-					<tr>
-						<td><img width="40" src="images/github-mark-white.svg" alt="GitHub Invertocat logo"/></td>
-						<td>GitHub</td>
-						<td><a href="https://github.com/l0py2">l0py2</a></td>
-					</tr>
-					<tr>
-						<td><img width="40" src="images/discord-mark-white.svg" alt="Discord mark only logo"/></td>
-						<td>Discord</td>
-						<td>l0py2</td>
-					</tr>
-				</table>
-			</section>
-		</main>
-		<footer>
-			<p>
-				Made with care by l0py2. And I am sorry if this page
-				does not look good, I am bad at design.
-			</p>
-		</footer>
-	</body>
+      <head>
+            <meta charset="utf-8"/>
+            <meta name="viewport" content="width=device-width, initial-scale=1"/>
+            <title>Home - l0py2</title>
+            <link rel="icon" href="images/icon.png"/>
+            <link rel="stylesheet" href="styles/main.css"/>
+            <link rel="stylesheet" href="styles/index.css"/>
+      </head>
+      <body>
+            <main>
+                  <section>
+                        <h1>l0py2</h1>
+                        <p>Hello I am l0py2 also known as lopy or Leonardo</p>
+                  </section>
+                  <section>
+                        <h2>Projects</h2>
+                  </section>
+                  <section>
+                        <h2>Things I like</h2>
+                  </section>
+                  <section>
+                        <h2>Contacts and social media</h2>
+                  </section>
+            </main>
+      </body>
 </html>
