--- a/index.html
+++ b/index.html
@@ -19,10 +19,61 @@
                   </section>
                   <section>
                         <h2>Things I like</h2>
+				<ul>
+					<li>
+						Anime mainly slice of life
+						<ul>
+							<li>Horimiya</li>
+							<li>New Game!</li>
+							<li>Ookami to Koushinryou</li>
+							<li>Plastic Memories</li>
+							<li>Seishun Buta Yarou wa Bunny Girl Senpai no Yume wo Minai</li>
+							<li>Sewayaki Kitsune no Senko-san</li>
+							<li>Toradora!</li>
+						</ul>
+					</li>
+					<li>
+						Eating
+						<ul>
+							<li>Lemons</li>
+							<li>Potatoes</li>
+						</ul>
+					</li>
+					<li>
+						Computers
+						<ul>
+							<li>Programming</li>
+							<li>
+								Playing games
+								<ul>
+									<li>Automation games like Factorio</li>
+									<li>Minecraft</li>
+								</ul>
+							</li>
+						</ul>
+					</li>
+				</ul>
                   </section>
                   <section>
                         <h2>Contacts and social media</h2>
+				<table>
+					<tr>
+						<td><img src="images/mail.svg" alt="Mail symbol"/></td>
+						<td><a href="mailto:l0py2.contact@gmail.com">l0py2.contact@gmail.com</a></td>
+					</tr>
+					<tr>
+						<td><img src="images/discord-mark-white.svg" alt="Discord mark only logo"/></td>
+						<td>l0py2@l0py2</td>
+					</tr>
+					<tr>
+						<td><img src="images/github-mark-white.svg" alt="GitHub Invertocat only logo"/></td>
+						<td><a href="https://github.com/l0py2" target="_blank">https://github.com/l0py2</a></td>
+					</tr>
+				</table>
                   </section>
             </main>
+		<footer>
+			<p>Atempt at web design by me</p>
+		</footer>
       </body>
 </html>
