Added shiro to the project list

--- a/index.html
+++ b/index.html
@@ -10,12 +10,25 @@
       </head>
       <body>
             <main>
-                  <section>
+                  <section id="welcome">
                         <h1>l0py2</h1>
                         <p>Hello I am l0py2 also known as lopy or Leonardo</p>
                   </section>
                   <section>
                         <h2>Projects</h2>
+				<ul>
+					<li>
+						<a href="https://github.com/l0py2/shiro" target="_blank"><h3>shiro</h3></a>
+						<p>Shiro is a Anime and Manga list written in C using SQLite for the CGI</p>
+						<p>
+							It was a fun project to explore
+							<a href="https://datatracker.ietf.org/doc/html/rfc3875" target="_blank">RFC 3875</a>
+							as my first attempt to read an RFC
+						</p>
+						<p>I know such a colorful display and a brilliant UI design</p>
+						<img src="images/shiro-screenshot.png" alt="shiro screenshot"/>
+					</li>
+				</ul>
                   </section>
                   <section>
                         <h2>Things I like</h2>
@@ -23,6 +36,7 @@
 					<li>
 						Anime mainly slice of life
 						<ul>
+							<li>Bocchi the Rock!</li>
 							<li>Horimiya</li>
 							<li>New Game!</li>
 							<li>Ookami to Koushinryou</li>
@@ -63,11 +77,11 @@
 					</tr>
 					<tr>
 						<td><img src="images/discord-mark-white.svg" alt="Discord mark only logo"/></td>
-						<td>l0py2@l0py2</td>
+						<td class="highlighted">l0py2@l0py2</td>
 					</tr>
 					<tr>
 						<td><img src="images/github-mark-white.svg" alt="GitHub Invertocat only logo"/></td>
-						<td><a href="https://github.com/l0py2" target="_blank">https://github.com/l0py2</a></td>
+						<td><a href="https://github.com/l0py2" target="_blank">l0py2</a></td>
 					</tr>
 				</table>
                   </section>
