Replaced contacts and social accounts table with cards

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 							<li>Seishun Buta Yarou wa Bunny Girl Senpai no Yume wo Minai</li>
 							<li>Sewayaki Kitsune no Senko-san</li>
 							<li>Toradora!</li>
+							<li>Houseki no Kuni</li>
 						</ul>
 					</li>
 					<li>
@@ -68,22 +69,22 @@
 					</li>
 				</ul>
                   </section>
-                  <section>
+                  <section id="social">
                         <h2>Contacts and social media</h2>
-				<table>
-					<tr>
-						<td><img src="images/mail.svg" alt="Mail symbol"/></td>
-						<td><a href="mailto:l0py2.contact@gmail.com">l0py2.contact@gmail.com</a></td>
-					</tr>
-					<tr>
-						<td><img src="images/discord-mark-white.svg" alt="Discord mark only logo"/></td>
-						<td class="highlighted">l0py2@l0py2</td>
-					</tr>
-					<tr>
-						<td><img src="images/github-mark-white.svg" alt="GitHub Invertocat only logo"/></td>
-						<td><a href="https://github.com/l0py2" target="_blank">l0py2</a></td>
-					</tr>
-				</table>
+				<div class="card-list">
+					<div>
+						<img src="images/mail.svg" alt="Mail symbol"/>
+						<a href="mailto:l0py2.contact@gmail.com">l0py2.contact@gmail.com</a>
+					</div>
+					<div>
+						<img src="images/discord-mark-white.svg" alt="Discord mark only logo"/>
+						<p class="highlighted">l0py2@l0py2</p>
+					</div>
+					<div>
+						<img src="images/github-mark-white.svg" alt="GitHub Invertocat only logo"/>
+						<a href="https://github.com/l0py2" target="_blank">l0py2</a>
+					</div>
+				</div>
                   </section>
             </main>
 		<footer>
