--- a/index.html
+++ b/index.html
@@ -1,94 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-      <head>
-            <meta charset="utf-8"/>
-            <meta name="viewport" content="width=device-width, initial-scale=1"/>
-            <title>Home - l0py2</title>
-            <link rel="icon" href="images/icon.png"/>
-            <link rel="stylesheet" href="styles/main.css"/>
-            <link rel="stylesheet" href="styles/index.css"/>
-      </head>
-      <body>
-            <main>
-                  <section id="welcome">
-                        <h1>l0py2</h1>
-                        <p>Hello I am l0py2 also known as lopy or Leonardo</p>
-                  </section>
-                  <section>
-                        <h2>Projects</h2>
-				<ul>
-					<li>
-						<a href="https://github.com/l0py2/shiro" target="_blank"><h3>shiro</h3></a>
-						<p>Shiro is a Anime and Manga list written in C using SQLite for the CGI</p>
-						<p>
-							It was a fun project to explore
-							<a href="https://datatracker.ietf.org/doc/html/rfc3875" target="_blank">RFC 3875</a>
-							as my first attempt to read an RFC
-						</p>
-						<p>I know such a colorful display and a brilliant UI design</p>
-						<img src="images/shiro-screenshot.png" alt="shiro screenshot"/>
-					</li>
-				</ul>
-                  </section>
-                  <section>
-                        <h2>Things I like</h2>
-				<ul>
-					<li>
-						Anime mainly slice of life
-						<ul>
-							<li>Bocchi the Rock!</li>
-							<li>Horimiya</li>
-							<li>New Game!</li>
-							<li>Ookami to Koushinryou</li>
-							<li>Plastic Memories</li>
-							<li>Seishun Buta Yarou wa Bunny Girl Senpai no Yume wo Minai</li>
-							<li>Sewayaki Kitsune no Senko-san</li>
-							<li>Toradora!</li>
-							<li>Houseki no Kuni</li>
-						</ul>
-					</li>
-					<li>
-						Eating
-						<ul>
-							<li>Lemons</li>
-							<li>Potatoes</li>
-						</ul>
-					</li>
-					<li>
-						Computers
-						<ul>
-							<li>Programming</li>
-							<li>
-								Playing games
-								<ul>
-									<li>Automation games like Factorio</li>
-									<li>Minecraft</li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-				</ul>
-                  </section>
-                  <section id="social">
-                        <h2>Contacts and social media</h2>
-				<div class="card-list">
-					<div>
-						<img src="images/mail.svg" alt="Mail symbol"/>
-						<a href="mailto:l0py2.contact@gmail.com">l0py2.contact@gmail.com</a>
-					</div>
-					<div>
-						<img src="images/discord-mark-white.svg" alt="Discord mark only logo"/>
-						<p class="highlighted">l0py2@l0py2</p>
-					</div>
-					<div>
-						<img src="images/github-mark-white.svg" alt="GitHub Invertocat only logo"/>
-						<a href="https://github.com/l0py2" target="_blank">l0py2</a>
-					</div>
-				</div>
-                  </section>
-            </main>
+	<head>
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<title>l0py2</title>
+		<link rel="stylesheet" href="styles/colours.css"/>
+		<link rel="stylesheet" href="styles/index.css"/>
+	</head>
+	<body>
+		<header>
+			<h1>/l0py2</h1>
+		</header>
+		<main></main>
 		<footer>
-			<p>Atempt at web design by me</p>
+			<input type="text" name="command" autofocus="true"/>
+			<button type="submit">Enter</button>
 		</footer>
-      </body>
+		<script src="scripts/main.js"></script>
+	</body>
 </html>
