Updated fetch command and added about command

--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 		<header>
 			<h1>/l0py2</h1>
 		</header>
-		<main></main>
+		<main>
+			<section id="output-section">
+				<pre id="output"></pre>
+			</section>
+			<section id="input">
+				<input type="text" name="command" autofocus="true"/>
+				<button type="submit">Enter</button>
+			</section>
+		</main>
 		<footer>
-			<input type="text" name="command" autofocus="true"/>
-			<button type="submit">Enter</button>
 		</footer>
 		<script src="scripts/main.js"></script>
 	</body>
