--- a/index.html
+++ b/index.html
@@ -5,23 +5,30 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<title>l0py2</title>
 		<link rel="stylesheet" href="styles/colours.css"/>
+		<link rel="stylesheet" href="styles/main.css"/>
 		<link rel="stylesheet" href="styles/index.css"/>
 	</head>
 	<body>
 		<header>
-			<h1>/l0py2</h1>
+			<nav>
+				<a href="#terminal">LPTerm</a>
+			</nav>
 		</header>
 		<main>
-			<section id="output-section">
-				<pre id="output"></pre>
-			</section>
-			<section id="input">
-				<input type="text" name="command" autofocus="true"/>
-				<button type="submit">Enter</button>
+			<h1>/l0py2</h1>
+			<section id="terminal">
+				<div class="terminal-header">
+					<h2>LPTerm</h2>
+				</div>
+				<div class="terminal-output">
+					<pre class="terminal-output"></pre>
+				</div>
+				<div class="terminal-input">
+					<input type="text" name="command" autofocus="true" class="terminal-input"/>
+					<button type="submit" class="terminal-input">Enter</button>
+				</div>
 			</section>
 		</main>
-		<footer>
-		</footer>
 		<script src="scripts/main.js"></script>
 	</body>
 </html>
