Added Catppuccin Mocha theme

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<title>l0py2</title>
-		<link rel="stylesheet" href="styles/colours.css"/>
+		<link rel="stylesheet" href="styles/catppuccin-mocha.css"/>
 		<link rel="stylesheet" href="styles/main.css"/>
 		<link rel="stylesheet" href="styles/index.css"/>
 	</head>
