--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="styles/catppuccin-mocha.css"/>
 		<link rel="stylesheet" href="styles/main.css"/>
 		<link rel="stylesheet" href="styles/index.css"/>
+		<link rel="stylesheet" href="styles/terminal-colors.css"/>
 	</head>
 	<body>
 		<header>
